fixed after review

--- a/documentation/app/components/list-item/index.hbs
+++ b/documentation/app/components/list-item/index.hbs
@@ -205,7 +205,7 @@
       </A.Generic>
     </L.Action>
   </Cut::ListItem>
-  <Cut::ListItem {{on 'click' this.onItemClick}} as |L|>
+  <Cut::ListItem as |L|>
     <L.Content>Service c</L.Content>
     <L.Action as |A|>
       <A.Generic>
