--- a/documentation/app/components/list-item/index.hbs
+++ b/documentation/app/components/list-item/index.hbs
@@ -4,9 +4,25 @@
 
 <h2>List Item Type</h2>
 <h3>Dynamic</h3>
-<p>Any of <Hds::Badge @text=' @onClick '/>, <Hds::Badge @text=' @route '/> or <Hds::Badge @text=' @href '/> param has to be added to <Hds::Badge @text="&lt;Cut::ListItem /&gt;"/> to make it dynamic type.
-  For interactive elements with <Hds::Badge @text=' @route '/> or <Hds::Badge @text=' @href '/>, list item work similar as <Hds::Badge @text='Hds::Interactive'/> element.
-  Actually <Hds::Badge @text='Cut::ListItem'/> uses the hds component as a wrapper for content and actions for the case.
+<p>Any of
+  <Hds::Badge @text=' @onClick ' />
+  ,
+  <Hds::Badge @text=' @route ' />
+  or
+  <Hds::Badge @text=' @href ' />
+  param has to be added to
+  <Hds::Badge @text="&lt;Cut::ListItem /&gt;" />
+  to make it dynamic type.
+  For interactive elements with
+  <Hds::Badge @text=' @route ' />
+  or
+  <Hds::Badge @text=' @href ' />
+  , list item work similar as
+  <Hds::Badge @text='Hds::Interactive' />
+  element.
+  Actually
+  <Hds::Badge @text='Cut::ListItem' />
+  uses the hds component as a wrapper for content and actions for the case.
 </p>
 <pre><code>
     &lt;Cut::ListItem @route='dummy' as |L|&gt;
@@ -22,39 +38,43 @@
   </Cut::ListItem>
   <Cut::ListItem @href="#" @isHrefExternal={{false}} as |L|>
     <L.Content>Element with href and isHrefExternal set to false</L.Content>
-    <L.Action as |A|>
-      <A.Dropdown as |dd|>
-        <dd.ToggleIcon
-          @icon='more-horizontal'
-          @text='Menu'
-          @hasChevron={{false}}
-        />
-        <dd.Interactive
-          @icon='edit'
-          @text='Edit'
-        />
-      </A.Dropdown>
-    </L.Action>
+    <L.ActionDropdown as |dd|>
+      <dd.ToggleIcon
+        @icon='more-horizontal'
+        @text='Menu'
+        @hasChevron={{false}}
+      />
+      <dd.Interactive
+        @icon='edit'
+        @text='Edit'
+      />
+    </L.ActionDropdown>
   </Cut::ListItem>
   <Cut::ListItem @onClick={{this.onItemClicked}} as |L|>
     <L.Content>Element with onClick</L.Content>
-    <L.Action as |A|>
-      <A.Dropdown as |dd|>
-        <dd.ToggleIcon
-          @icon='more-horizontal'
-          @text='Menu'
-          @hasChevron={{false}}
-        />
-        <dd.Interactive
-          @icon='edit'
-          @text='Edit'
-        />
-      </A.Dropdown>
-    </L.Action>
+    <L.ActionDropdown as |dd|>
+      <dd.ToggleIcon
+        @icon='more-horizontal'
+        @text='Menu'
+        @hasChevron={{false}}
+      />
+      <dd.Interactive
+        @icon='edit'
+        @text='Edit' />
+    </L.ActionDropdown>
   </Cut::ListItem>
 </div>
 <h3>Static</h3>
-<p>Static type is default for <Hds::Badge @text='Cut::ListItem'/>, if none of the <Hds::Badge @text=' @onClick '/>, <Hds::Badge @text=' @route '/> or <Hds::Badge @text=' @href '/> params is passed.</p>
+<p>Static type is default for
+  <Hds::Badge @text='Cut::ListItem' />
+  , if none of the
+  <Hds::Badge @text=' @onClick ' />
+  ,
+  <Hds::Badge @text=' @route ' />
+  or
+  <Hds::Badge @text=' @href ' />
+  params is passed.
+</p>
 <pre><code>
     &lt;Cut::ListItem as |L|&gt;
       &lt;L.Content>Service a&lt;/L.Content&gt;
@@ -66,19 +86,17 @@
   </Cut::ListItem>
   <Cut::ListItem as |L|>
     <L.Content>Service b</L.Content>
-    <L.Action as |A|>
-      <A.Dropdown as |dd|>
-        <dd.ToggleIcon
-          @icon='more-horizontal'
-          @text='Menu'
-          @hasChevron={{false}}
-        />
-        <dd.Interactive
-          @icon='edit'
-          @text='Edit'
-        />
-      </A.Dropdown>
-    </L.Action>
+    <L.ActionDropdown as |dd|>
+      <dd.ToggleIcon
+        @icon='more-horizontal'
+        @text='Menu'
+        @hasChevron={{false}}
+      />
+      <dd.Interactive
+        @icon='edit'
+        @text='Edit'
+      />
+    </L.ActionDropdown>
   </Cut::ListItem>
   <Cut::ListItem as |L|>
     <L.Content>Service c</L.Content>
@@ -89,137 +107,113 @@
 <pre><code>
     &lt;Cut::ListItem as |L|&gt;
       &lt;L.Content>Service a&lt;/L.Content&gt;
-      &lt;L.Action as |A|&gt;
-        &lt;A.Dropdown as |dd|&gt;
-          &lt;dd.ToggleIcon @icon='more-horizontal' @text='Menu' @hasChevron={{false}} /&gt;
-          &lt;dd.Interactive @icon='edit' @text='Edit' /&gt;
-        &lt;/A.Dropdown&gt;
+      &lt;L.ActionDropdown as |dd|&gt;
+         &lt;dd.ToggleIcon @icon='more-horizontal' @text='Menu' @hasChevron={{false}} /&gt;
+         &lt;dd.Interactive @icon='edit' @text='Edit' /&gt;
       &lt;/L.Action&gt;
     &lt;/Cut::ListItem&gt;
   </code></pre>
 <div class="doc-list-container">
   <Cut::ListItem as |L|>
     <L.Content>Service a</L.Content>
-    <L.Action as |A|>
-      <A.Dropdown as |dd|>
-        <dd.ToggleIcon
-          @icon='more-horizontal'
-          @text='Menu'
-          @hasChevron={{false}}
-        />
-        <dd.Interactive
-          @icon='edit'
-          @text='Edit'
-        />
-      </A.Dropdown>
-    </L.Action>
+    <L.ActionDropdown as |dd|>
+      <dd.ToggleIcon
+        @icon='more-horizontal'
+        @text='Menu'
+        @hasChevron={{false}}
+      />
+      <dd.Interactive
+        @icon='edit'
+        @text='Edit'
+      />
+    </L.ActionDropdown>
   </Cut::ListItem>
   <Cut::ListItem as |L|>
     <L.Content>Service b</L.Content>
-    <L.Action as |A|>
-      <A.Dropdown as |dd|>
-        <dd.ToggleIcon
-          @icon='more-horizontal'
-          @text='Menu'
-          @hasChevron={{false}}
-        />
-        <dd.Interactive
-          @icon='edit'
-          @text='Edit'
-        />
-      </A.Dropdown>
-    </L.Action>
+    <L.ActionDropdown as |dd|>
+      <dd.ToggleIcon
+        @icon='more-horizontal'
+        @text='Menu'
+        @hasChevron={{false}}
+      />
+      <dd.Interactive
+        @icon='edit'
+        @text='Edit'
+      />
+    </L.ActionDropdown>
   </Cut::ListItem>
   <Cut::ListItem as |L|>
     <L.Content>Service c</L.Content>
-    <L.Action as |A|>
-      <A.Dropdown as |dd|>
-        <dd.ToggleIcon
-          @icon='more-horizontal'
-          @text='Menu'
-          @hasChevron={{false}}
-        />
-        <dd.Interactive
-          @icon='edit'
-          @text='Edit'
-        />
-      </A.Dropdown>
-    </L.Action>
+    <L.ActionDropdown as |dd|>
+      <dd.ToggleIcon
+        @icon='more-horizontal'
+        @text='Menu'
+        @hasChevron={{false}}
+      />
+      <dd.Interactive
+        @icon='edit'
+        @text='Edit'
+      />
+    </L.ActionDropdown>
   </Cut::ListItem>
 </div>
 <h3>Button</h3>
 <pre><code>
     &lt;Cut::ListItem as |L|&gt;
       &lt;L.Content>Service a&lt;/L.Content&gt;
-      &lt;L.Action as |A|&gt;
-        &lt;A.Button @text='Delete' @color="critical" @icon="delete"/&gt;
-      &lt;/L.Action&gt;
+      &lt;L.ActionButton @text='Delete' @color="critical" @icon="delete"/&gt;
     &lt;/Cut::ListItem&gt;
   </code></pre>
 <div class="doc-list-container">
   <Cut::ListItem as |L|>
     <L.Content>Service a</L.Content>
-    <L.Action as |A|>
-      <A.Button @text='Invalidate'></A.Button>
-    </L.Action>
+    <L.ActionButton @text='Invalidate' />
   </Cut::ListItem>
   <Cut::ListItem as |L|>
     <L.Content>Service b</L.Content>
-    <L.Action as |A|>
-      <A.Button @text='Delete' @color="critical" @icon="delete"></A.Button>
-    </L.Action>
+    <L.ActionButton @text='Delete' @color="critical" @icon="delete" />
   </Cut::ListItem>
 </div>
 <h3>Generic</h3>
 <pre><code>
     &lt;Cut::ListItem as |L|&gt;
       &lt;L.Content>Service a&lt;/L.Content&gt;
-      &lt;L.Action as |A|&gt;
-        &lt;A.Generic&gt;
+      &lt;L.ActionGeneric&gt;
           &lt;Hds::Badge @text="2 permissions" @color='warning' @size="small"/&gt;
           &lt;@text="3 errors" @type="outlined" @color='critical' @size="small"/&gt;
           &lt;@text="Terraform" @icon="terraform" @size="small"/&gt;
-        &lt;/A.Generic&gt;
       &lt;/L.Action&gt;
     &lt;/Cut::ListItem&gt;
   </code></pre>
 <div class="doc-list-container">
   <Cut::ListItem as |L|>
     <L.Content>Service a</L.Content>
-    <L.Action as |A|>
-      <A.Generic>
-        <Hds::Badge @text="2 permissions" @color='warning' @size="small" />
-        <Hds::Badge @text="3 errors" @type="outlined" @color='critical' @size="small" />
-        <Hds::Badge @text="Terraform" @icon="terraform" @size="small" />
-      </A.Generic>
-    </L.Action>
+    <L.ActionGeneric>
+      <Hds::Badge @text="2 permissions" @color='warning' @size="small" />
+      <Hds::Badge @text="3 errors" @type="outlined" @color='critical' @size="small" />
+      <Hds::Badge @text="Terraform" @icon="terraform" @size="small" />
+    </L.ActionGeneric>
   </Cut::ListItem>
   <Cut::ListItem as |L|>
     <L.Content>Service b</L.Content>
-    <L.Action as |A|>
-      <A.Generic>
-        <Hds::ButtonSet>
-          <Hds::Button @text="Invalidate" @color="critical" @size="small" />
-          <Hds::Button @text="Use" @color="secondary" @size="small" />
-        </Hds::ButtonSet>
-      </A.Generic>
-    </L.Action>
+    <L.ActionGeneric>
+      <Hds::ButtonSet>
+        <Hds::Button @text="Invalidate" @color="critical" @size="small" />
+        <Hds::Button @text="Use" @color="secondary" @size="small" />
+      </Hds::ButtonSet>
+    </L.ActionGeneric>
   </Cut::ListItem>
   <Cut::ListItem as |L|>
     <L.Content>Service c</L.Content>
-    <L.Action as |A|>
-      <A.Generic>
-        <Hds::Link::Standalone @href="#" @text="2 Permissions" @icon="docs-link" />
-      </A.Generic>
-    </L.Action>
+    <L.ActionGeneric>
+      <Hds::Link::Standalone @href="#" @text="2 Permissions" @icon="docs-link" />
+    </L.ActionGeneric>
   </Cut::ListItem>
   <Cut::ListItem as |L|>
     <L.Content>Service d</L.Content>
-    <L.Action as |A|>
-      <A.Generic>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, porttitor sed feugiat in, blandit
-          sit amet massa. Nulla fermentum vel erat sit amet convallis. Duis sit amet mi.</p>
-      </A.Generic>
-    </L.Action>
+    <L.ActionGeneric>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, porttitor sed feugiat in, blandit
+        sit amet massa. Nulla fermentum vel erat sit amet convallis. Duis sit amet mi.</p>
+    </L.ActionGeneric>
   </Cut::ListItem>
 </div>
