--- a/toolkit/src/components/cut/list-item/index.hbs
+++ b/toolkit/src/components/cut/list-item/index.hbs
@@ -1,24 +1,21 @@
 {{!
   Copyright (c) HashiCorp, Inc.
 }}
-{{#if (or this.href this.route @onClick)}}
-  <Hds::Interactive
-    class="cut-list-item active hds-surface-mid"
-    @href={{this.href}}
-    @isRouteExternal={{@isRouteExternal}}
-    @route={{this.route}}
-    @isHrefExternal={{@isHrefExternal}}
-    @query={{@query}}
-    @replace={{@replace}}
-    {{on 'click' this.onClickAction}}
-    ...attributes
-  >
-    {{yield (hash Content=(component "cut/list-item/content"))}}
-    {{yield (hash Action=(component "cut/list-item/action"))}}
-  </Hds::Interactive>
-{{else}}
-  <div class="cut-list-item hds-surface-base" ...attributes>
-    {{yield (hash Content=(component "cut/list-item/content"))}}
-    {{yield (hash Action=(component "cut/list-item/action"))}}
+<div class="cut-list-item {{if (or @route @href @onClick) 'hds-surface-mid' 'hds-surface-base'}}" ...attributes>
+  {{yield (hash Content=(component "cut/list-item/content"
+    href=@href
+    isRouteExternal=@isRouteExternal
+    route=@route
+    isHrefExternal=@isHrefExternal
+    query=@query
+    replace=@replace
+    onClick=@onClick))}}
+  {{yield (hash Action=(component "cut/list-item/action"))}}
+  <div>
+    {{yield
+      (hash ActionButton=(component "hds/button" size="small")
+        ActionDropdown=(component "hds/dropdown")
+        ActionGeneric=(component "cut/list-item/action-generic")
+      )}}
   </div>
-{{/if}}
+</div>
