Fix lint errors

--- a/documentation/app/templates/index.hbs
+++ b/documentation/app/templates/index.hbs
@@ -5,12 +5,11 @@
   <T.Tab>Support</T.Tab>
   <T.Tab>Contributing</T.Tab>
   <T.Panel>
-    <p><CodeInline @code="@hashicorp/consul-ui-toolkit" />
-      is a collection of presentational components and utilities specifically
-      meant to be shared across the different Consul applications. The toolkit
-      contains generic components that you may have come to expect from a
-      component library, as well as very feature specific components meant for
-      the Consul apps</p>
+    <p>Consul UI Toolkit is a collection of presentational components and
+      utilities specifically meant to be shared across the different Consul
+      applications. The toolkit contains generic components that you may have
+      come to expect from a component library, as well as very feature specific
+      components meant for the Consul apps</p>
 
     <p>While the toolkit is an open-source project, it is intentionally built
       for Consul products. However, it may be used outside of them. Please refer
