--- a/toolkit/src/styles/components/list-item.scss
+++ b/toolkit/src/styles/components/list-item.scss
@@ -13,7 +13,7 @@
   gap: 8px;
 }
 
-a.cut-list-item__content {
+a.cut-list-item__content-container {
   text-decoration: none;
   color: inherit;
 
@@ -22,7 +22,7 @@ a.cut-list-item__content {
   }
 }
 
-button.cut-list-item__content {
+button.cut-list-item__content-container {
   background-color: unset;
   width: 100%;
   border: inherit;
@@ -35,7 +35,7 @@ button.cut-list-item__content {
   }
 }
 
-.cut-list-item__content {
+.cut-list-item__content-container {
   display: flex;
   justify-content: start;
   flex: 1;
