--- a/documentation/app/components/list-item/index.hbs
+++ b/documentation/app/components/list-item/index.hbs
@@ -217,3 +217,191 @@
     </L.ActionGeneric>
   </Cut::ListItem>
 </div>
+
+<h3>Templates</h3>
+<div class="list-container">
+  <Cut::ListItem @href="#" @isHrefExternal={{false}} as |L|>
+    <L.Content>
+      <Cut::ListItem::Template as |T|>
+        <T.Label as |LB|>
+          <LB.Title>
+            <Cut::TextWithIcon @text="auth-01" @icon="server-cluster" @connection="/"/>
+            <Cut::TextWithIcon @text="partition-1" @icon="users"/>
+            <span/>
+            <FlightIcon @name="network-alt" @size="16"/>
+            <span/>
+            <Cut::TextWithIcon @text="Web" @icon="server-cluster" @connection="/"/>
+            <Cut::TextWithIcon @text="default" @icon="users"/>
+          </LB.Title>
+          <LB.Metadata>
+            <Hds::Badge @text="Allow" @color="success" @icon="arrow-right" @size="small"/>
+            <Cut::TextWithIcon @text="30 seconds ago" @icon="pipeline"/>
+            <div>10 shared services</div>
+          </LB.Metadata>
+        </T.Label>
+      </Cut::ListItem::Template>
+    </L.Content>
+  </Cut::ListItem>
+  <pre><code>
+      &lt;Cut::ListItem @onClick=this.onItemClicked as |L|&gt;
+        &lt;L.Content&gt;
+          &lt;Cut::ListItem::Template as |T|&gt;
+            &lt;T.Label as |LB&gt;
+              &lt;LB.Icon @name="check-circle" /&gt;
+              &lt;LB.Title>Service-name&lt;/LB.Title&gt;
+              &lt;LB.Metadata&gt;
+                &lt;Hds::Badge @text="Registered via Vault" @icon="vault" @size="small" /&gt;
+                &lt;div&gt;12 instances&lt;/div&gt;
+                &lt;Cut::TextWithIcon @text="in service mesh with proxy" @icon="mesh" /&gt;
+                &lt;Cut::TextWithIcon @text="kubernetes-api, dev, kube-dev-2" @icon="tag" /&gt;
+              &lt;/LB.Metadata&gt;
+            &lt;/T.Label&gt;
+         &lt;/Cut::ListItem::Template&gt;
+       &lt;/L.Content&gt;
+     &lt;/Cut::ListItem&gt;
+  </code></pre>
+  <Cut::ListItem @onClick={{this.onItemClicked}} as |L|>
+    <L.Content>
+      <Cut::ListItem::Template as |T|>
+        <T.Label as |LB|>
+          <LB.Icon @name="check-circle"/>
+          <LB.Title>Service-name</LB.Title>
+          <LB.Metadata>
+            <Hds::Badge @text="Registered via Vault" @icon="vault" @size="small"/>
+            <div>12 instances</div>
+            <Cut::TextWithIcon @text="in service mesh with proxy" @icon="mesh"/>
+            <Cut::TextWithIcon @text="kubernetes-api, dev, kube-dev-2" @icon="tag"/>
+          </LB.Metadata>
+        </T.Label>
+      </Cut::ListItem::Template>
+    </L.Content>
+    <L.Action as |A|>
+      <A.Dropdown as |dd|>
+        <dd.ToggleIcon
+          @icon='more-horizontal'
+          @text='Menu'
+          @hasChevron={{false}}
+        />
+        <dd.Interactive
+          @icon='edit'
+          @text='Edit'
+        />
+      </A.Dropdown>
+    </L.Action>
+  </Cut::ListItem>
+  <pre><code>
+      &lt;Cut::ListItem as |L|&gt;
+        &lt;L.Content&gt;
+         &lt;Cut::ListItem::Template as |T|&gt;
+           &lt;T.Label as |LB|&gt;
+             &lt;LB.Title&gt;consul-da-server-client-development&lt;/LB.Title&gt;
+             &lt;LB.Metadata&gt;
+                &lt;Cut::TextWithIcon @icon="users" @text="billing"/&gt;
+                &lt;div&gt;/&lt;/div&gt;
+                &lt;Cut::TextWithIcon @icon="folder" @text="default"/&gt;
+             &lt;/LB.Metadata&gt;
+           &lt;/Cut::ListItem::Template&gt;
+           &lt;T.Badge @text="Allow" @color="success" @icon="arrow-right" @size="small"/&gt;
+           &lt;T.Label2 as |LB|&gt;
+             &lt;LB.Title&gt;consul-da-server-client-development&lt;/T.Title&gt;
+             &lt;LB.Metadata&gt;
+               &lt;Cut::TextWithIcon @icon="users" @text="billing"/&gt;
+               &lt;div&gt;/&lt;/div&gt;
+               &lt;Cut::TextWithIcon @icon="folder" @text="default"/&gt;
+             &lt;/LB.Metadata&gt;
+           &lt;/T.Label2&gt;
+        &lt;/Cut::ListItem::Template&gt;
+       &lt;/L.Content&gt;
+     &lt;/Cut::ListItem&gt;
+  </code></pre>
+  <Cut::ListItem {{on 'click' this.onItemClick}} as |L|>
+    <L.Content>
+      <Cut::ListItem::Template as |T|>
+        <T.Label as |LB|>
+          <LB.Title>consul-da-server-client-development</LB.Title>
+          <LB.Metadata>
+            <Cut::TextWithIcon @icon="users" @text="billing" @connection="/"/>
+            <Cut::TextWithIcon @icon="folder" @text="default"/>
+          </LB.Metadata>
+        </T.Label>
+        <T.Badge @text="Allow" @color="success" @icon="arrow-right" @size="small"/>
+        <T.Label2 as |LB|>
+          <LB.Title>consul-da-server-client-development</LB.Title>
+          <LB.Metadata>
+            <Cut::TextWithIcon @icon="users" @text="billing" @connection="/"/>
+            <Cut::TextWithIcon @icon="folder" @text="default"/>
+          </LB.Metadata>
+        </T.Label2>
+      </Cut::ListItem::Template>
+    </L.Content>
+    <L.Action as |A|>
+      <A.Dropdown as |dd|>
+        <dd.ToggleIcon
+          @icon='more-horizontal'
+          @text='Menu'
+          @hasChevron={{false}}
+        />
+        <dd.Interactive
+          @icon='edit'
+          @text='Edit'
+        />
+      </A.Dropdown>
+    </L.Action>
+  </Cut::ListItem>
+  <Cut::ListItem as |L|>
+    <L.Content>
+      <Cut::ListItem::Template as |T|>
+        <T.Label as |LB|>
+          <LB.Title>Namespace-name</LB.Title>
+          <LB.Metadata>
+            <div>namespace description</div>
+            <Cut::TextWithIcon @text="policy-1" @icon="file-text"/>
+            <Cut::TextWithIcon @text="policy-2" @icon="file-text"/>
+            <Cut::TextWithIcon @text="role-1" @icon="user"/>
+            <Cut::TextWithIcon @text="role-2" @icon="user"/>
+          </LB.Metadata>
+        </T.Label>
+      </Cut::ListItem::Template>
+    </L.Content>
+    <L.Action as |A|>
+      <A.Dropdown as |dd|>
+        <dd.ToggleIcon
+          @icon='more-horizontal'
+          @text='Menu'
+          @hasChevron={{false}}
+        />
+        <dd.Interactive
+          @icon='edit'
+          @text='Edit'
+        />
+      </A.Dropdown>
+    </L.Action>
+  </Cut::ListItem>
+  <Cut::ListItem as |L|>
+    <L.Content>
+      <Cut::ListItem::Template as |T|>
+        <T.Label as |LB|>
+          <LB.Title>Exposed-path-name</LB.Title>
+          <LB.Metadata>
+            <Cut::TextWithIcon @text="grpc" @icon="globe"/>
+            <Cut::TextWithIcon @text="listening on :63891" @icon="network"/>
+            <Cut::TextWithIcon @text="/expeditabandwidth_overriding_berkshire.xif" @icon="path"/>
+          </LB.Metadata>
+        </T.Label>
+      </Cut::ListItem::Template>
+    </L.Content>
+    <L.Action as |A|>
+      <A.Dropdown as |dd|>
+        <dd.ToggleIcon
+          @icon='more-horizontal'
+          @text='Menu'
+          @hasChevron={{false}}
+        />
+        <dd.Interactive
+          @icon='edit'
+          @text='Edit'
+        />
+      </A.Dropdown>
+    </L.Action>
+  </Cut::ListItem>
+</div>
