--- a/toolkit/src/components/cut/list-item/label/index.hbs
+++ b/toolkit/src/components/cut/list-item/label/index.hbs
@@ -3,8 +3,8 @@
 }}
 
 <div class="cut-list-item-label" ...attributes>
-  <div class="title-row">
-    {{yield (hash Icon=(component 'flight-icon'))}}
+  <div class="cut-list-item-label__title-row">
+    {{yield (hash Icon=(component 'flight-icon' size="16"))}}
     {{yield (hash Title=(component 'cut/list-item/label/title'))}}
   </div>
   {{yield (hash Metadata=(component 'cut/list-item/label/metadata'))}}
