--- a/documentation/app/styles/components/page-header.scss
+++ b/documentation/app/styles/components/page-header.scss
@@ -8,7 +8,7 @@
 
   .doc-PageHeader-title {
     display: flex;
-    gap: 16px;
+    gap: 1rem;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-between;
