--- a/documentation/app/templates/components/list-item.hbs
+++ b/documentation/app/templates/components/list-item.hbs
@@ -97,7 +97,7 @@
       <CodeInline @code="type" />
       argument</p>
 
-    <div class="preview-block">
+    <div class="doc-PreviewBlock">
       <Hds::Alert @type="page" as |A|>
         <A.Title>Title here</A.Title>
         <A.Description>Description here</A.Description>
@@ -114,7 +114,7 @@
       />
     </div>
 
-    <div class="preview-block">
+    <div class="doc-PreviewBlock">
       <Hds::Alert @type="compact" as |A|>
         <A.Title>Title here</A.Title>
         <A.Description>Description here</A.Description>
