Change color of Page Header descriptions

--- a/documentation/app/styles/components/page-header.scss
+++ b/documentation/app/styles/components/page-header.scss
@@ -30,5 +30,6 @@
   .doc-PageHeader-description {
     max-width: 880px;
     margin-top: 0;
+    color: var(--token-color-foreground-faint);
   }
 }
