--- a/documentation/app/templates/components/list-item.hbs
+++ b/documentation/app/templates/components/list-item.hbs
@@ -98,10 +98,12 @@
       argument</p>
 
     <div class="doc-PreviewBlock">
-      <Hds::Alert @type="page" as |A|>
-        <A.Title>Title here</A.Title>
-        <A.Description>Description here</A.Description>
-      </Hds::Alert>
+      <div class="doc-PreviewBlock-content">
+        <Hds::Alert @type="page" as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+      </div>
 
       <CodeBlock
         @code={{{"
@@ -115,18 +117,104 @@
     </div>
 
     <div class="doc-PreviewBlock">
-      <Hds::Alert @type="compact" as |A|>
-        <A.Title>Title here</A.Title>
-        <A.Description>Description here</A.Description>
-      </Hds::Alert>
+      <div class="doc-PreviewBlock-content">
+        <Hds::Alert @type="inline" as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type="inline" as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type="inline" as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type="inline" as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type="inline" as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type="inline" as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type="inline" as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type="inline" as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type="inline" as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type="inline" as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+      </div>
 
       <CodeBlock
         @code={{{"
-      <Hds::Alert @type='compact' as |A|>
-        <A.Title>Title here</A.Title>
-        <A.Description>Description here</A.Description>
-      </Hds::Alert>
-    "}}}
+        <Hds::Alert @type='inline' as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        
+        <Hds::Alert @type='inline' as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type='inline' as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type='inline' as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type='inline' as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type='inline' as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type='inline' as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+        <Hds::Alert @type='inline' as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+      "}}}
+        @language="handlebars"
+      />
+    </div>
+
+    <div class="doc-PreviewBlock">
+      <div class="doc-PreviewBlock-content">
+        <Hds::Alert @type="compact" as |A|>
+          <A.Title>Title here</A.Title>
+          <A.Description>Description here</A.Description>
+        </Hds::Alert>
+      </div>
+
+      <CodeBlock
+        @code={{{"
+            <Hds::Alert @type='compact' as |A|>
+              <A.Title>Title here</A.Title>
+              <A.Description>Description here</A.Description>
+            </Hds::Alert>
+          "}}}
         @language="handlebars"
       />
     </div>
