Add copywrite headers

--- a/documentation/app/components/preview-block/index.hbs
+++ b/documentation/app/components/preview-block/index.hbs
@@ -1,3 +1,7 @@
+{{!
+  Copyright (c) HashiCorp, Inc.
+}}
+
 <div class="doc-PreviewBlock">
   {{yield (hash Preview=(component "preview-block/preview"))}}
   {{yield (hash Code=(component "preview-block/code"))}}
