--- a/documentation/app/styles/components/preview-block.scss
+++ b/documentation/app/styles/components/preview-block.scss
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 3rem;
-  // border: 1px solid var(--token-color-foreground-faint);
 
   > .doc-PreviewBlock-content {
     padding: 2rem;
@@ -27,5 +26,23 @@
     margin: 0;
     max-height: 500px;
     overflow: scroll;
+  }
+
+  > .code-toolbar > .toolbar > .toolbar-item > .copy-to-clipboard-button {
+    border: 1px solid transparent;
+    margin-top: 1rem;
+    margin-right: 1rem;
+    color: var(--token-color-foreground-high-contrast);
+    padding: 1px 7px;
+    background-color: var(--token-color-foreground-action);
+    border-radius: var(--token-form-control-border-radius);
+    font-size: var(--token-typography-display-200-font-size);
+    font-weight: var(--token-typography-font-weight-regular);
+    line-height: var(--token-typography-display-200-line-height);
+    font-family: var(--token-typography-font-stack-text);
+
+    &:hover {
+      background-color: var(--token-color-foreground-action-hover);
+    }
   }
 }
