--- a/documentation/app/templates/components/list-item.hbs
+++ b/documentation/app/templates/components/list-item.hbs
@@ -3,7 +3,7 @@
 }}
 
 <PageHeader
-  @title="List Item"
+  @title="something"
   @figma="https://www.google.ca"
   @github="https://github.com"
   @status="development"
