--- a/toolkit/src/components/cut/copy-block/index.hbs
+++ b/toolkit/src/components/cut/copy-block/index.hbs
@@ -1,3 +1,7 @@
+{{!
+  Copyright (c) HashiCorp, Inc.
+}}
+
 <div class="cut-copy-block" ...attributes>
   <div data-test-copy-block-content>{{yield}}</div>
   <div class="cut-copy-block__copy-button">
